--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <div class="container">
     <h1>Ir a Github</h1>
     <a href="https://github.com/">
-      <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
+      <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" width="250" height="250" alt="octocat">
     </a>
+    <br>
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
     </button>
